--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -33,6 +33,22 @@ footer {
   footer .container {
     padding-top: 8px; }
 
+.tpl-top-nav {
+  height: 58px;
+  position: relative;
+  /*.navbar-right {
+    .btn-danger {
+      float: right;
+    }
+  }*/ }
+  .tpl-top-nav .navbar-form {
+    border: none;
+    box-shadow: none;
+    float: right; }
+  .tpl-top-nav .navbar-nav li > a {
+    padding-bottom: 19.5px;
+    padding-top: 19.5px; }
+
 .main-content {
   margin: 15px 0; }
 
@@ -104,3 +120,40 @@ footer {
     left: 50%;
     padding-top: -25px;
     padding-left: -30px; }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .tpl-top-nav ul.navbar-right li a {
+    padding-left: 5px;
+    padding-right: 5px; } }
+@media (max-width: 767px) {
+  .tpl-top-nav .navbar-form.navbar-right {
+    margin: 0; }
+
+  .tpl-filter .form-group {
+    margin-left: 10px;
+    margin-right: 10px; } }
+@media (max-width: 600px) {
+  #templateButton > i {
+    display: none; }
+
+  #filterButton > i {
+    display: none; }
+
+  .fa-shopping-cart {
+    display: none; } }
+@media (max-width: 550px) {
+  #filterButton {
+    display: none; } }
+@media (max-width: 475px) {
+  #templateButton {
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 13px; }
+    #templateButton .badge {
+      display: none; }
+
+  .head-container .navbar-right .btn-danger {
+    padding: 10px 5px; } }
+@media (max-width: 450px) {
+  .navbar-nav.navbar-right {
+    display: none; } }
