--- a/public/asset/css/style.scss
+++ b/public/asset/css/style.scss
@@ -49,6 +49,26 @@ footer {
     padding-top: 8px;
   }
 }
+.tpl-top-nav {
+  height: #{$navbarHeight - 1};
+  position: relative;
+  /*.navbar-right {
+    .btn-danger {
+      float: right;
+    }
+  }*/
+  .navbar-form {
+    border: none;
+    box-shadow: none;
+    float: right;
+  }
+  .navbar-nav {
+    li > a {
+      padding-bottom: 19.5px;
+      padding-top: 19.5px;
+    }
+  }
+}
 
 .main-content {
   margin: 15px 0;
@@ -131,5 +151,71 @@ footer {
     left: 50%;
     padding-top: -25px;
     padding-left: -30px;
+  }
+}
+
+// --- RESPONSIVE ---
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .tpl-top-nav {
+    ul.navbar-right {
+      li {
+        a {
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 767px) {
+  .tpl-top-nav {
+    .navbar-form.navbar-right {
+      margin: 0;
+    }
+  }
+  .tpl-filter {
+    .form-group {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+  }
+}
+@media (max-width: 600px) {
+  #templateButton > i {
+    display: none;
+  }
+  #filterButton > i {
+    display: none;
+  }
+  .fa-shopping-cart {
+    display: none;
+  }
+}
+@media (max-width: 550px) {
+  #filterButton {
+    display: none;
+  }
+}
+@media (max-width: 475px) {
+  #templateButton {
+    .badge {
+      display: none;
+    }
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 13px;
+  }
+  .head-container {
+    .navbar-right {
+      .btn-danger {
+        padding: 10px 5px;
+      }
+    }
+  }
+}
+@media (max-width: 450px) {
+  .navbar-nav.navbar-right {
+    display: none;
   }
 }
