--- a/app/views/index/index.jade
+++ b/app/views/index/index.jade
@@ -166,9 +166,7 @@ html(ng-app="TemplateDemo")
                                 button.btn.btn-primary(type="button", style="margin-right: 20px;", ng-click="filter()") Filter
 
         // Frame showing template demo URL
-        div.tpl-frame-container(ng-style="{ width: w, height: h, marginTop: t, marginLeft: l }")
-            div.tpl-loader.hide
-                i.fa.fa-refresh.fa-spin.fa-inverse.fa-3x
+        div.tpl-frame-container(tpl-frame-responsive, style="width: 100%; height: 100%;")
             iframe(ng-src="{{ frameUrl }}", tpl-frame-loading, track="frameUrl")
 
         //if lt IE 9
