--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -5,12 +5,14 @@
  * @author  http://twitter.com/nghuuphuoc
  */
 .tpl-body {
-  background: #2c3e50; }
+  background: #27ae60; }
   .tpl-body .navbar, .tpl-body .nav {
-    height: 59px; }
+    height: 60px; }
   .tpl-body .nav > li {
     /*border-left: 1px solid #e5e5e5;*/
     height: 100%; }
+  .tpl-body .navbar-fixed-top {
+    border-bottom: none; }
 
 html, body {
   height: 100%; }
@@ -34,7 +36,7 @@ footer {
     padding-top: 8px; }
 
 .tpl-top-nav {
-  height: 58px;
+  height: 60px;
   position: relative;
   /*.navbar-right {
     .btn-danger {
@@ -55,10 +57,21 @@ footer {
 .tpl-tab {
   z-index: 1000; }
 
+.tpl-toggle {
+  background: #2c3e53;
+  width: 60px;
+  height: 60px;
+  padding: 15px 19px;
+  position: fixed;
+  right: 0;
+  top: 0; }
+  .tpl-toggle a {
+    color: #fff; }
+
 .tpl-items {
   background: #fff;
   border: 1px solid #e5e5e5;
-  margin: 58px auto 0 auto;
+  margin: 59px auto 0 auto;
   padding-bottom: 10px; }
   .tpl-items .pagination {
     margin: 0; }
@@ -82,7 +95,7 @@ footer {
 .tpl-filter {
   background: #fff;
   border: 1px solid #e5e5e5;
-  margin: 58px auto 0 auto;
+  margin: 59px auto 0 auto;
   padding-top: 20px; }
   .tpl-filter hr {
     margin-left: 15px;
@@ -94,7 +107,7 @@ footer {
 
 .tpl-frame-container {
   position: fixed;
-  top: 58px;
+  top: 60px;
   left: 0;
   width: 100%;
   height: 100%; }
@@ -104,7 +117,7 @@ footer {
     height: 100%; }
 
 .tpl-loader {
-  background: #2c3e50;
+  background: #27ae60;
   position: absolute;
   opacity: 0.8;
   top: 0;
@@ -152,7 +165,7 @@ footer {
     #templateButton .badge {
       display: none; }
 
-  .head-container .navbar-right .btn-danger {
+  .tpl-top-nav .navbar-right .btn-danger {
     padding: 10px 5px; } }
 @media (max-width: 450px) {
   .navbar-nav.navbar-right {
