#44: Show the template when clicking on the thumbnail

--- a/app/views/index/index.jade
+++ b/app/views/index/index.jade
@@ -98,7 +98,8 @@ html(ng-app="TemplateDemo")
                                             a(href="#{{ template.slug }}", ng-click="showTemplate(template, theme)") {{ theme.name }}
 
                         p
-                            img(ng-src="#{thumbPrefixUrl}{{ template.thumbs.medium }}")
+                            a(href="#{{ template.slug }}", ng-click="showTemplate(template)")
+                                img(ng-src="#{thumbPrefixUrl}{{ template.thumbs.medium }}")
 
                     li.clearfix
 
