--- a/src/app/views/layouts/backend.jade
+++ b/src/app/views/layouts/backend.jade
@@ -41,6 +41,13 @@ html
                                     a(href="/admin/membership") Memberships
                                 li
                                     a(href="/admin/user") Administrators
+                                li.dropdown
+                                    a.dropdown-toggle(href="javascript: void(0);", data-toggle="dropdown")
+                                        | Log&nbsp;
+                                        b.caret
+                                    ul.dropdown-menu
+                                        li
+                                            a(href="/admin/log/download") Download History
 
                         ul.nav.navbar-nav.navbar-right
                             li.dropdown
