--- a/src/public/asset/css/style.css
+++ b/src/public/asset/css/style.css
@@ -78,19 +78,36 @@ footer {
 
 .tpl-item-list {
   list-style-type: none;
-  padding: 0;
-  margin: 0; }
-  .tpl-item-list > li {
+  margin: 10px 10px 0 10px;
+  padding: 0; }
+  .tpl-item-list li {
     margin: 0;
-    padding: 15px 0; }
-    .tpl-item-list > li h2 {
-      font-size: 20px;
-      margin: 0 0 10px 0;
-      text-align: center; }
-    .tpl-item-list > li img {
-      width: 100%; }
-    .tpl-item-list > li.clearfix {
+    padding: 0; }
+    .tpl-item-list li.clearfix {
       padding: 0; }
+  .tpl-item-list .tpl-item {
+    border: 1px solid silver;
+    height: 200px;
+    margin: 10px;
+    position: relative; }
+  .tpl-item-list .tpl-item-thumb {
+    height: 100%; }
+  .tpl-item-list .tpl-item-meta {
+    background: #000;
+    bottom: 0;
+    color: #fff;
+    width: 100%;
+    opacity: 0.8;
+    position: absolute;
+    padding: 10px; }
+    .tpl-item-list .tpl-item-meta h2 {
+      font-size: 20px;
+      font-weight: bold;
+      margin: 0 0 10px 0; }
+    .tpl-item-list .tpl-item-meta a {
+      color: #e74c3c; }
+    .tpl-item-list .tpl-item-meta .label {
+      margin-right: 5px; }
 
 .tpl-filter {
   background: #fff;
