--- a/src/public/asset/css/style.scss
+++ b/src/public/asset/css/style.scss
@@ -104,21 +104,43 @@ footer {
 }
 .tpl-item-list {
   list-style-type: none;
+  margin: 10px 10px 0 10px;
   padding: 0;
-  margin: 0;
-  > li {
+  li {
     margin: 0;
-    padding: 15px 0;
-    h2 {
-      font-size: 20px;
-      margin: 0 0 10px 0;
-      text-align: center;
-    }
-    img {
-      width: 100%;
-    }
+    padding: 0;
     &.clearfix {
       padding: 0;
+    }
+  }
+  .tpl-item {
+    border: 1px solid silver;
+    height: 200px;
+    margin: 10px;
+    position: relative;
+  }
+  .tpl-item-thumb {
+    height: 100%;
+  }
+  .tpl-item-meta {
+    background: #000;
+    bottom: 0;
+    color: #fff;
+    width: 100%;
+    opacity: 0.8;
+    position: absolute;
+    padding: 10px;
+
+    h2 {
+      font-size: 20px;
+      font-weight: bold;
+      margin: 0 0 10px 0;
+    }
+    a {
+      color: #e74c3c;
+    }
+    .label {
+      margin-right: 5px;
     }
   }
 }
