#59: Show the current year in footer

--- a/src/app/views/layouts/backend.jade
+++ b/src/app/views/layouts/backend.jade
@@ -69,7 +69,7 @@ html
 
         footer
             .container
-                | Copyright (c) 2013 &nbsp;
+                | &copy; #{new Date().getFullYear()} &nbsp;
                 a(href="#{provider.url}") #{provider.name}
 
         //if lt IE 9
