--- a/src/app/views/layouts/account.jade
+++ b/src/app/views/layouts/account.jade
@@ -52,7 +52,7 @@ html
 
         footer
             .container
-                | Copyright (c) 2013 &nbsp;
+                | &copy; #{new Date().getFullYear()} &nbsp;
                 a(href="#{provider.url}") #{provider.name}
 
         //if lt IE 9
